# Helio-VE

./: .env  .gitignore  95_ds-nocloud.cfg  Cargo.toml  LICENSE  README.md  cpu-percent.py  direct.xml  hve-cloudinit.service  hve-dhcp.service  hve-server.service  hve-ui.service  install.sh  qmp.py  setup.sh  system_install.sh
helio-bot/: Cargo.toml  build.rs  package.json  tsconfig.json
helio-bot/src/: index.ts  main.rs
helio-bot/src/commands/: list.rs  start.rs
helio-bot/src/proto/: rpc.client.ts  rpc.ts
helio-bot/src/proto/google/protobuf/: empty.ts
helio-cloudinit/: Cargo.toml
helio-cloudinit/src/: main.rs
helio-dhcp/: Cargo.toml
helio-dhcp/src/: main.rs
helio-pg/: Cargo.toml
helio-pg/migrations/2024-10-11-120327_create_tables/: down.sql  up.sql
helio-pg/src/: lib.rs  schema.rs
helio-pg/src/models/: instance.rs  mod.rs
helio-server/: Cargo.toml  build.rs
helio-server/proto/: rpc.proto
helio-server/src/: main.rs
helio-server/src/common/: mod.rs
helio-server/src/qemu_disk/: mod.rs
helio-server/src/qemu_kvm/: mod.rs
helio-ui/: Cargo.toml
helio-ui/src/: main.rs
helio-ui/src/commands/: create.rs  delete.rs  list.rs  mod.rs
proto/: rpc.proto
