[package]
name = "helio-dhcp"
version = "0.1.0"
edition = "2021"

[dependencies]
dhcproto = "0.12"
nix = { version = "0.29", features = ["socket"] }
tokio = { version = "1", features = ["full"] }
iptables = "0.5.2"

helio-pg = { path = "../helio-pg" }
chrono = { version = "0.4.38", features = ["serde"] }