[package]
name = "helio-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
tonic = "0.12.3"
prost = "0.13.3"
prost-types = "0.13.3"
helio-pg = { path = "../helio-pg" }
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
iptables = "0.5.2"
serde_json = { version = "1.0.128" }

[build-dependencies]
tonic-build = "0.12.3"