[package]
name = "helio-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

tonic = "0.12.3"
prost = "0.13.3"
prost-types = "0.13.3"

uuid = { version = "1.10.0", features = [ "v4", "fast-rng", "macro-diagnostics" ] }

[build-dependencies]
tonic-build = "0.12.3"